# ddonilang

./: .dockerignore  .gitignore  .gitlab-ci.yml  3.ddn  AGENTS.md  CHANGELOG.md  Cargo.toml  MANIFEST.txt  PROJECT_STATUS.md  PR_CHECKLIST_v20.6.27.md  PR_CHECKLIST_v20.6.28.md  README.md  README_ay.md  README_en.md  README_eu.md  README_ja.md  README_kn.md  README_mn.md  README_ne.md  README_qu.md  README_sym3.md  README_ta.md  README_te.md  README_tr.md  ROADMAP_V2_STUDIO_PRODUCTIZATION_REBASE_V1.md  SEAMGRIM_NUMERIC_TRACK_BROWSER_INDEX_V1.md  SEAMGRIM_NUMERIC_TRACK_CONSOLIDATION_V1.md  SEAMGRIM_NUMERIC_TRACK_LESSON_PREVIEW_V1.md  SEAMGRIM_NUMERIC_TRACK_REPORT_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_A11Y_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_A11Y_STATUS_EXPORT_SUMMARY_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_A11Y_STATUS_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_A11Y_STATUS_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_A11Y_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_EXPORT_V1.md  SEAMGRIM_NUMERIC_TRACK_RESULT_COMPARE_HISTORY_REPORT_TABLE_STATUS_BADGE_V1.md  (+88 more)
lang/: Cargo.toml
lang/examples/: canon_ast_dump.rs  parse_and_normalize.rs
lang/src/: age_gate.rs  ast.rs  canonicalizer.rs  currentline.rs  dialect.rs  frontdoor.rs  lexer.rs  lib.rs  normalizer.rs  parser.rs  runtime.rs  stdlib.rs  surface.rs  term_map.rs
tool/: Cargo.toml
tool/assets/: ai_prompt_template_v19.4.33.txt  ai_prompt_template_v20.0.2.txt
tool/assets/detmath/: dtm_manifest.json  lut_sin_v1.dtm
tool/src/: ai_prompt.rs  ddn_runtime.rs  detmath_assets.rs  file_meta.rs  gate0_registry.rs  lib.rs  main.rs  preprocess.rs  project_meta.rs  schema.rs  wasm_api.rs
tool/src/lsp/: server.rs
tool/src/proof/: hash.rs
tools/teul-cli/: Cargo.toml
tools/teul-cli/.git.bak/: config
tools/teul-cli/assets/: ai_prompt_template_v20.0.3.txt
tools/teul-cli/src/: ai_prompt.rs  canon.rs  file_meta.rs  main.rs
tools/teul-cli/src/cli/: ai.rs  alrim.rs  asset.rs  bdl_packet.rs  bogae.rs  bogae_bundle.rs  bogae_console.rs  bogae_edit.rs  bogae_playback.rs  bogae_web.rs  canon.rs  cert.rs  check.rs  dataset.rs  detjson.rs  diag.rs  docset.rs  dotbogi.rs  dultra_replay.rs  eco.rs  (+53 more)
tools/teul-cli/tests/: run_golden.py  run_w107_golden_index_selfcheck.py  run_w109_golden_index_selfcheck.py  run_w111_golden_index_selfcheck.py  run_w49_golden_index_selfcheck.py
(+9708 files in other folders)
