# ddonirang/Cargo.toml
[workspace]
members = [
    "core",
    "lang",
    "numeric",
    "proof",
    "symbolic",
    "tool",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package.ddonirang-tool]
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
debug = true
