[package]
name = "teul-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
zip = "0.6"
time = { version = "0.3", features = ["formatting"] }
ddonirang-core = { path = "../../core" }
ddonirang-lang = { path = "../../lang" }

[workspace]
